gitops/components/gateways/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    hostname: "observability.isis.cclrc.ac.uk"
  - protocol: HTTPS
    port: 443
    name: https
    hostname: "observability.isis.cclrc.ac.uk"
    # tls:
    #   certificateRefs:
    #   - kind: Secret
    #     group: ""
    #     name: observability-tls
