gitops/components/gateways/argocd-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "observability.isis.cclrc.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    backendRefs:
    - name: argocd-server
      port: 80
