gitops/components/gateways/tls-redirect-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: http
  hostnames:
  - observability.isis.cclrc.ac.uk
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
